# cam_project_2

./: .gitignore  CMakeLists.txt  main.cpp  my_web_server_worker.cpp  my_web_server_worker.h
lib_gphoto2_bash_adapter/: gphoto2_bash.cpp  gphoto2_bash.h
my_cam_adapter/: cam_adapter.cpp  cam_adapter.h
my_cam_adapter_2/: cam_adapter.cpp  cam_adapter.h  cam_functions.h  context.cpp
src/server_files/: app.css  app.js  index.html
web_sockets/: WebServer.cpp  WebServer.h  client_events.h
web_sockets/lib_my_event_handler/: delegate_ws.cpp  delegate_ws.h  event_ws.cpp  event_ws.h  handler_ws.h
